data/derived/sp14/progs/unify/prog3162.ml.out
Characters 232-253:
  buildAverage(build(rand,depth-1))
              ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
